posiGen_FullsendBox/src/objects/PM_Tool__c.object
<CustomObject>
    <fields>
        <fullName>Intro_Call_Installation__c</fullName>
        <formula>IF( Intro_Call_NA_Override__c == TRUE, NULL, 
IF(AND(NOT(ISBLANK(Project_Manager__c)), Intro_Call__c == TRUE ), 2, 
IF(AND(NOT(ISBLANK(Project_Manager__c)), Intro_Call__c == FALSE), 1, 
0) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intro Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intro_Call_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intro Call NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intro_Call_SDT__c</fullName>
        <label>Intro Call SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intro_Call_SD__c</fullName>
        <formula>Intro_Call_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intro Call SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intro_Call__c</fullName>
        <formula>IF(INCLUDES( Deal__r.Touch_Milestones__c , &quot;Intro Call&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intro Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <formula>Deal__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M1_ITC_Funding_Aging__c</fullName>
        <formula>IF(ISNULL( M1_ITC_Funding_SD__c ),NULL, 
IF(!ISNULL( M1_ITC_Funding_ED__c ), M1_ITC_Funding_ED__c - M1_ITC_Funding_SD__c, TODAY() - M1_ITC_Funding_SD__c))</formula>
        <label>M1/ITC Funding Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_ITC_Funding_EDT__c</fullName>
        <label>M1/ITC Funding EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M1_ITC_Funding_ED__c</fullName>
        <formula>M1_ITC_Funding_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1/ITC Funding ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M1_ITC_Funding_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>M1/ITC Funding NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M1_ITC_Funding_SDT__c</fullName>
        <label>M1/ITC Funding SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M1_ITC_Funding_SD__c</fullName>
        <formula>M1_ITC_Funding_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1/ITC Funding SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M1_ITC_Funding__c</fullName>
        <formula>IF( M1_ITC_Funding_NA_Override__c == TRUE, NULL, IF(NOT(ISNULL( M1_submission_date__c )), 2, IF(AND( Deal__r.RecordType.Name  == &apos;Sunrun&apos;,NOT(ISNULL( Electrical_Installed_Date__c ))), 1,  0)   ) )</formula>
        <label>M1/ITC Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_submission_date__c</fullName>
        <formula>Deal__r.M1_submission_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 submission date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2_Aging__c</fullName>
        <formula>IF(ISNULL( M2_SD__c ),NULL, 
IF(!ISNULL( M2_ED__c ), M2_ED__c - M2_SD__c, TODAY() - M2_SD__c))</formula>
        <label>M2 Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_EDT__c</fullName>
        <label>M2 EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2_ED__c</fullName>
        <formula>M2_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>M2 NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M2_SDT__c</fullName>
        <label>M2 SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2_SD__c</fullName>
        <formula>M2_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2__c</fullName>
        <formula>IF( M2_NA_Override__c == TRUE, NULL, IF(NOT(ISNULL( M2_submission_date__c )), 2,   IF(AND( Deal__r.RecordType.Name == &apos;Sunrun&apos;, NOT(ISNULL( Inspection_Complete_With_Letter_Date__c ))), 1,  0) ) )</formula>
        <label>M2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M2_submission_date__c</fullName>
        <formula>Deal__r.M2_submission_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2 submission date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M3_Aging__c</fullName>
        <formula>IF(ISNULL(M3_SD__c ),NULL, 
IF(!ISNULL( M3_ED__c ),M3_ED__c - M3_SD__c, TODAY() - M3_SD__c))</formula>
        <label>M3 Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_EDT__c</fullName>
        <label>M3 EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M3_ED__c</fullName>
        <formula>M3_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M3_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>M3 NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M3_SDT__c</fullName>
        <label>M3 SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M3_SD__c</fullName>
        <formula>M3_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M3__c</fullName>
        <formula>IF( M3_NA_Override__c == TRUE, NULL, IF(NOT(ISNULL( M3_submission_date__c )), 2,  IF(AND( Deal__r.RecordType.Name == &apos;Sunrun&apos; , NOT(ISNULL( Utility_Final_Approval_Completed_Date__c ))), 1,  0) ))</formula>
        <label>M3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_submission_date__c</fullName>
        <formula>Deal__r.M3_submission_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M3 submission date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Municipal_Inspection_Aging__c</fullName>
        <formula>IF(ISNULL( Municipal_Inspection_SD__c  ),NULL, 
IF(!ISNULL( Municipal_Inspection_ED__c ), Municipal_Inspection_ED__c - Municipal_Inspection_SD__c, TODAY() - Municipal_Inspection_SD__c))</formula>
        <label>Municipal Inspection Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Municipal_Inspection_EDT__c</fullName>
        <label>Municipal Inspection EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Municipal_Inspection_ED__c</fullName>
        <formula>Municipal_Inspection_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipal Inspection ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Municipal_Inspection_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Municipal Inspection NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Municipal_Inspection_SDT__c</fullName>
        <label>Municipal Inspection SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Municipal_Inspection_SD__c</fullName>
        <formula>Municipal_Inspection_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipal Inspection SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Municipal_Inspection__c</fullName>
        <formula>IF( 
Municipal_Inspection_NA_Override__c == TRUE, 
NULL, 
IF( 
NOT( 
ISNULL( Inspection_Complete_With_Letter_Date__c ) 
), 
2, 
IF( 
AND( 
Quality_Control_NA_Override__c == FALSE, 
NOT( 
ISNULL( Electrical_Installed_Date__c ) 
), 
NOT( 
ISNULL( QC_Date__c ) 
) 
), 
1, 
IF( 
AND( 
Quality_Control_NA_Override__c == TRUE, 
NOT( 
ISNULL( Electrical_Installed_Date__c ) 
) 
), 
1, 
0 
) 
) 
) 
)</formula>
        <label>Municipal Inspection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NMIA_Received_Date__c</fullName>
        <formula>IF(  Project_PV_Feasibility__r.RecordType.Name == &apos;PV Feasibility&apos;,   Project_PV_Feasibility__r.NMIA_Received_Date__c  , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NMIA Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NMIA_Requested_Date__c</fullName>
        <formula>IF( Project__r.RecordType.Name == &apos;PV Install&apos;, Project__r.NMIA_Request_to_Verify_Date__c , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NMIA Request to Verify Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NMIA_Submitted_Date__c</fullName>
        <formula>IF(  Project_PV_Feasibility__r.RecordType.Name == &apos;PV Feasibility&apos;,  Project_PV_Feasibility__r.NMIA_Submitted_Date__c , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NMIA Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Meter_Installed_Verified_Date__c</fullName>
        <formula>IF( Project__r.RecordType.Name == &apos;PV Install&apos;,  Project__r.PV_Net_Meter_Install_Verified_Date__c   , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Meter Installed Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Numeric_ID__c</fullName>
        <formula>IF(NOT(ISBLANK( Project_Manager__c )), Deal__r.Opp_Numeric_ID__c, IF(ISBLANK( Project_Manager__c ), Deal__r.Opp_Numeric_ID__c, NULL) )</formula>
        <label>Opportunity Numeric ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PM Tools</relationshipLabel>
        <relationshipName>PM_Tools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Assignment_Aging__c</fullName>
        <formula>IF(ISNULL(PM_Assignment_SD__c ),NULL, 
IF(!ISNULL(PM_Assignment_ED__c ),PM_Assignment_ED__c - PM_Assignment_SD__c, TODAY() - PM_Assignment_SD__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Assignment Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Assignment_EDT__c</fullName>
        <label>PM Assignment EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Assignment_ED__c</fullName>
        <formula>PM_Assignment_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Assignment ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Assignment_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM Assignment NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Assignment_SDT__c</fullName>
        <label>PM Assignment SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Assignment_SD__c</fullName>
        <formula>PM_Assignment_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Assignment SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Assignment__c</fullName>
        <formula>IF( PM_Assignment_NA_Override__c == TRUE, NULL, IF(AND(NOT(ISNULL(Contract_Approved_Date__c)) , NOT(ISBLANK( Project_Manager__c ))) , 2 , IF(AND(NOT(ISNULL(Contract_Approved_Date__c)) , ISBLANK( Project_Manager__c )) , 1 , 0) ))</formula>
        <label>PM Assignment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTO_Final_Utility_Approval_Aging__c</fullName>
        <formula>IF(ISNULL( PTO_Final_Utility_Approval_SD__c ),NULL, 
IF(!ISNULL( PTO_Final_Utility_Approval_ED__c ),PTO_Final_Utility_Approval_ED__c - PTO_Final_Utility_Approval_SD__c, TODAY() - PTO_Final_Utility_Approval_SD__c))</formula>
        <label>PTO/Final Utility Approval Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTO_Final_Utility_Approval_EDT__c</fullName>
        <label>PTO/Final Utility Approval EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTO_Final_Utility_Approval_ED__c</fullName>
        <formula>PTO_Final_Utility_Approval_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTO/Final Utility Approval ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTO_Final_Utility_Approval_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PTO/Final Utility Approval NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTO_Final_Utility_Approval_SDT__c</fullName>
        <label>PTO/Final Utility Approval SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTO_Final_Utility_Approval_SD__c</fullName>
        <formula>PTO_Final_Utility_Approval_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTO/Final Utility Approval SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTO_Final_Utility_Approval__c</fullName>
        <formula>IF( PTO_Final_Utility_Approval_NA_Override__c == TRUE, NULL, IF(NOT(ISNULL(  Utility_Final_Approval_Completed_Date__c )), 2,  IF(AND(OR(Record_Type_p__c == &apos;NY&apos;, Record_Type_p__c == &apos;CT&apos;), NOT(ISNULL( Inspection_Complete_With_Letter_Date__c ))), 1,  0) ) )</formula>
        <label>PTO/Final Utility Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PV_Completion_EU_Scheduling_Call__c</fullName>
        <formula>IF(INCLUDES( Deal__r.Touch_Milestones__c , &quot;PV Completion/EU Scheduling Call&quot;), TRUE, False)</formula>
        <label>PV Completion/EU Scheduling Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PV_Install_Status__c</fullName>
        <formula>IF(Project__r.RecordType.Name == &apos;PV Install&apos;, TEXT( Project__r.Status__c ), NULL )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PV Install Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_Lease_Payment__c</fullName>
        <formula>Deal__r.Lease_System_Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PV Lease Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Permitting_Aging__c</fullName>
        <formula>IF(ISNULL(Permitting_SD_Parallel__c),NULL, 
IF(!ISNULL(Permitting_ED__c), Permitting_ED__c - Permitting_SD__c, TODAY()- Permitting_SD__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Permitting Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permitting_EDT__c</fullName>
        <label>Permitting EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permitting_ED__c</fullName>
        <formula>Permitting_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Permitting ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permitting_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permitting NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permitting_SDT__c</fullName>
        <label>Permitting SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permitting_SD_Parallel__c</fullName>
        <label>Permitting SD Parallel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permitting_SD__c</fullName>
        <formula>Permitting_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Permitting SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permitting__c</fullName>
        <formula>IF( 
	Permitting_NA_Override__c == TRUE, 
	NULL, 
	IF(
		OR( 
			NOT(ISNULL(Electrical_Permit_Received__c )), 
			NOT(ISNULL( Building_Permit_received__c ))
		), 
		2,  
		IF(
			AND(
				OR(  Feasibility_Result_Parallel__c == &apos;Feasible&apos;, Feasibility_Result_Parallel__c == &apos;Feasible (Smaller System)&apos;, Feasibility_Result_Parallel__c == &apos;Feasible (Redeploy)&apos;),
				PV_Install_Status__c!=null
			)
			,1
			,0
		) 
	)
)</formula>
        <label>Permitting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipeline_Stage__c</fullName>
        <formula>Deal__r.Pipeline_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placed_In_Service_Date__c</fullName>
        <formula>Project__r.PVI_Placed_In_Service_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Placed In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <formula>Deal__r.Account_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Completion_Date__c</fullName>
        <label>Project Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_EE_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project EE Assessment</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>PM Tools (Project EE Assessment)</relationshipLabel>
        <relationshipName>PM_Tools1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_EE_Upgrade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project EE Upgrade</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>PM Tools (Project EE Upgrade)</relationshipLabel>
        <relationshipName>PM_Tools2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PM_Tools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_PV_Feasibility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project PV Feasibility</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>PM Tools (PV Feasibility)</relationshipLabel>
        <relationshipName>PM_Tools3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Removal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project PV Install</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>PM Tools</relationshipLabel>
        <relationshipName>PM_Tools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>PM Tools</relationshipLabel>
        <relationshipName>PM_Tools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QC_Date__c</fullName>
        <formula>IF( Project__r.RecordType.Name == &apos;PV Install&apos;,  Project__r.QC_Date__c  , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qc_Passed__c</fullName>
        <formula>Project__r.QC_Passed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qc Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_Control_Aging__c</fullName>
        <formula>IF(ISNULL( Quality_Control_SD__c ),NULL, 
IF(!ISNULL( Quality_Control_ED__c ), Quality_Control_ED__c - Quality_Control_SD__c, TODAY() - Quality_Control_SD__c))</formula>
        <label>Quality Control Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Control_EDT__c</fullName>
        <label>Quality Control EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quality_Control_ED__c</fullName>
        <formula>Quality_Control_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality Control ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quality_Control_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quality Control NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_Control_SDT__c</fullName>
        <label>Quality Control SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quality_Control_SD__c</fullName>
        <formula>Quality_Control_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality Control SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quality_Control__c</fullName>
        <formula>IF( Quality_Control_NA_Override__c == TRUE,
   NULL, 
   IF(
      AND(
      NOT(
         ISNULL( QC_Date__c )
      ),
      Qc_Passed__c == true,
      NOT(
             ISNULL( Electrical_Installed_Date__c )
      )),
      2,
      IF(
         NOT(
             ISNULL( Electrical_Installed_Date__c )
         ),
         1,
         0
      ) 
   ) 
)</formula>
        <label>Quality Control</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_P_Install_Aging__c</fullName>
        <formula>IF(ISNULL( R_P_Install_SD_Parallel__c ),NULL, 
IF(!ISNULL( R_P_Install_ED__c ), R_P_Install_ED__c - R_P_Install_SD_Parallel__c, TODAY()- R_P_Install_SD_Parallel__c))</formula>
        <label>R&amp;P Install Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_P_Install_EDT__c</fullName>
        <label>R&amp;P Install EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_P_Install_ED__c</fullName>
        <formula>R_P_Install_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R&amp;P Install ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_P_Install_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>R&amp;P Install NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_P_Install_SDT__c</fullName>
        <label>R&amp;P Install SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_P_Install_SD_Parallel__c</fullName>
        <label>R&amp;P Install SD Parallel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_P_Install_SD__c</fullName>
        <formula>R_P_Install_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R&amp;P Install SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_P_Install__c</fullName>
        <formula>IF( 
	R_P_Install_NA_Override__c ,
	NULL, 
	IF(
		NOT(
			ISNULL( R_P_Installed_Date__c )
		), 
		2, 
		IF(
			AND(
			    Record_Type_p__c==&apos;NY&apos;,
				
				NOT(
					ISNULL( NMIA_Received_Date__c )
				),
				OR(
					NOT(
						ISNULL( Building_Permit_received__c )
					), 
					NOT(
						ISNULL( Electrical_Permit_Received__c )
					)
				),
				NOT(
					ISNULL(State_Program_Application_Approved_Date__c)
				)
		    ),
			1,
			IF(
				AND(
					Record_Type_p__c==&apos;CT&apos;,
				
					NOT(
						ISNULL( NMIA_Submitted_Date__c )
					),
					OR(
						NOT(
							ISNULL( Building_Permit_received__c )
						), 
						NOT(
							ISNULL( Electrical_Permit_Received__c )
						)
					),
					NOT(
						ISNULL(State_Program_Application_Approved_Date__c)
					)
				),
				1,
				IF(
					AND(
						Record_Type_p__c == &apos;LA&apos;, 
						OR(
							NOT(
								ISNULL( Building_Permit_received__c )
							), 
							NOT(
								ISNULL( Electrical_Permit_Received__c )
							)
						)
						
					), 
					1, 
				0
				)
	  ) 	)
    )
)</formula>
        <label>R&amp;P Install</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_P_Installed_Date__c</fullName>
        <formula>IF( Project__r.RecordType.Name == &apos;PV Install&apos;,  Project__r.PVI_Rails_Installed_Date__c  , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R&amp;P Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Completion_Date__c</fullName>
        <formula>Deal__r.Rebate_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Submission_Date__c</fullName>
        <formula>Deal__r.Rebate_Submission_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Type_Parallel_Workflow__c</fullName>
        <label>Record Type Parallel Workflow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Parallel__c</fullName>
        <formula>State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_p__c</fullName>
        <formula>State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Customer__c</fullName>
        <formula>(Deal__r.Referring_Customer__c)</formula>
        <label>Referring Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removal_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Removal Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>PV Removal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>PM Tools (Removal Project)</relationshipLabel>
        <relationshipName>PM_Tools4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Aging__c</fullName>
        <formula>IF(ISNULL(Sales_Order_SD_Parallel__c ),NULL, 
IF(!ISNULL( Sales_Order_ED__c ), Sales_Order_ED__c - Sales_Order_SD_Parallel__c , TODAY() - Sales_Order_SD_Parallel__c))</formula>
        <label>Sales Order Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Created__c</fullName>
        <formula>IF(AND(Sales_Order__c!=NULL,Sales_Order__c!=&apos;&apos;),true,false)</formula>
        <label>Sales Order Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order_EDT__c</fullName>
        <label>Sales Order EDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Order_ED__c</fullName>
        <formula>Sales_Order_EDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Order ED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Installation__c</fullName>
        <formula>IF( 
	Sales_Order_NA_Override__c == TRUE, 
	NULL, 
	IF( 
		Sales_Order_Created__c == TRUE, 
		2,  
		IF(
			AND( 
				Record_Type_p__c  == &apos;LA&apos;, 
				
				Feasibility__c = 2	

				
			), 
			1,
			IF(
				AND(
					Record_Type_p__c == &apos;CT&apos;,
					NOT(
						ISNULL( Engineering_Report_Received_Date__c )
					),
					NOT(
						ISNULL(  Electrical_Permit_Received__c )
					)
				), 
				1, 
				
				IF(
					AND(
						Record_Type_p__c == &apos;NY&apos;,
						NOT(
							ISNULL( Engineering_Report_Received_Date__c )
						),
						NOT(
							ISNULL(  Building_Permit_received__c )
						),
						NOT(
							ISNULL(  NMIA_Received_Date__c )
						)
						
					),
					1,
					0
				)
			) 
		) 
	)
)</formula>
        <label>Sales Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order_NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Order NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order_SDT__c</fullName>
        <label>Sales Order SDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Order_SD_Parallel__c</fullName>
        <label>Sales Order SD Parallel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Order_SD__c</fullName>
        <formula>Sales_Order_SDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Order SD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>PM Tools</relationshipLabel>
        <relationshipName>PM_Tools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <formula>Deal__r.Owner:User.FirstName +&apos; &apos;+ Deal__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <formula>Deal__r.Account_Mobile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Phone</label>
        <type>Text</type>
    </fields>
</CustomObject>